--- a/trades/templates/trade_confirmation.html
+++ b/trades/templates/trade_confirmation.html
@@ -1,20 +1,24 @@
 <!-- Modal -->
-<div class="modal fade"
-     id="confirmationModal"
-     tabindex="-1"
-     role="dialog"
-     aria-labelledby="confirmationModalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog"
-       role="document">
+<div
+  class="modal fade"
+  id="confirmationModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="confirmationModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"
-            id="confirmationModalLabel">Trade Confirmation</h5>
-        <button type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close">
+        <h5 class="modal-title" id="confirmationModalLabel">
+          Trade Confirmation
+        </h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -22,11 +26,14 @@
         <p id="trade-response"></p>
       </div>
       <div class="modal-footer">
-        <a class="btn btn-secondary"
-           href="/users/{{ g.user.id }}">View Dashboard</a>
-        <button type="button"
-                class="btn btn-primary"
-                data-dismiss="modal">Place Another Trade</button>
+        <a
+          class="btn btn-secondary"
+          href="{{ url_for('users.show_user_dashboard', user_id=g.user.id) }}"
+          >View Dashboard</a
+        >
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          Place Another Trade
+        </button>
       </div>
     </div>
   </div>
