--- a/trades/templates/history.html
+++ b/trades/templates/history.html
@@ -1,59 +1,53 @@
-{% extends "base.html" %}
-
-{% block title %}
-  Trading History
-{% endblock title %}
-
+{% extends "base.html" %} {% block title %} Trading History {% endblock title %}
 {% block content %}
-  <div class="container mt-3">
-    <!-- Closed Positions -->
-    <div id="closed-positions">
-      <h5 class="mb-3">Closed Positions</h5>
-      {% if trades|length == 0 %}
-        <p class="mb-5">There are no closed trades.</p>
-      {% else %}
-        <table class="table"
-               id="closed-trades-table">
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Timestamp</th>
-              <th scope="col"
-                  class="text-center">Symbol</th>
-              <th scope="col"
-                  class="text-center">Type</th>
-              <th scope="col"
-                  class="text-center">Quantity</th>
-              <th scope="col"
-                  class="text-center">Entry Price</th>
-              <th scope="col"
-                  class="text-center">Exit Price</th>
-              <th scope="col"
-                  class="text-center">Realized P/L</th>
-              <th scope="col"
-                  class="text-center">Action</th>
-            </tr>
-          </thead>
-          <tbody id="tbody-closed-trades">
-            {% for trade in trades %}
-              <tr>
-                <td>{{ trade.id }}</td>
-                <td>{{ trade.get_date("entry") }}</td>
-                <td class="text-center">{{ trade.stock.symbol.upper() }}</td>
-                <td class="text-center">{{ trade.trade_type }}</td>
-                <td class="text-center">{{ trade.qty }}</td>
-                <td class="text-center">{{ trade.entry_price }}</td>
-                <td class="text-center">{{ trade.latest_price }}</td>
-                <td class="text-center {{'text-success' if trade.get_pnl() > 0 else 'text-danger' }}">{{ trade.get_pnl() }}</td>
-                <td class="text-center">
-                  <a class="btn btn-info btn-sm"
-                     href="/trades/{{ trade.id }}">View</a>
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      {% endif %}
-    </div>
+<div class="container mt-3">
+  <!-- Closed Positions -->
+  <div id="closed-positions">
+    <h5 class="mb-3">Closed Positions</h5>
+    {% if trades|length == 0 %}
+    <p class="mb-5">There are no closed trades.</p>
+    {% else %}
+    <table class="table" id="closed-trades-table">
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Timestamp</th>
+          <th scope="col" class="text-center">Symbol</th>
+          <th scope="col" class="text-center">Type</th>
+          <th scope="col" class="text-center">Quantity</th>
+          <th scope="col" class="text-center">Entry Price</th>
+          <th scope="col" class="text-center">Exit Price</th>
+          <th scope="col" class="text-center">Realized P/L</th>
+          <th scope="col" class="text-center">Action</th>
+        </tr>
+      </thead>
+      <tbody id="tbody-closed-trades">
+        {% for trade in trades %}
+        <tr>
+          <td>{{ trade.id }}</td>
+          <td>{{ trade.get_date("entry") }}</td>
+          <td class="text-center">{{ trade.stock.symbol.upper() }}</td>
+          <td class="text-center">{{ trade.trade_type }}</td>
+          <td class="text-center">{{ trade.qty }}</td>
+          <td class="text-center">{{ trade.entry_price }}</td>
+          <td class="text-center">{{ trade.latest_price }}</td>
+          <td
+            class="text-center {{'text-success' if trade.get_pnl() > 0 else 'text-danger' }}"
+          >
+            {{ trade.get_pnl() }}
+          </td>
+          <td class="text-center">
+            <a
+              class="btn btn-info btn-sm"
+              href="{{ url_for('trades.show_trade_details', trade_id=trade.id) }}"
+              >View</a
+            >
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+    {% endif %}
   </div>
+</div>
 {% endblock content %}
