fixed bugs in user profile pages

--- a/users/templates/change_password.html
+++ b/users/templates/change_password.html
@@ -1,23 +1,18 @@
-{% from "macros/fields.html" import render_profile_field %}
-{% extends "base.html" %}
-
-{% block title %}
-  Change Password
-{% endblock title %}
-
-{% block content %}
-  <div class="container col-3 mt-5">
-    <form method="POST"
-          action="/users/{{ g.user.id }}/changepassword"
-          novalidate>
-      {{ form.hidden_tag() }}
-      {{ render_profile_field(form.current_password) }}
-      {{ render_profile_field(form.new_password) }}
-      {{ render_profile_field(form.new_password_retype) }}
-      <div class="form-group text-center">
-        <button type="submit"
-                class="btn btn-primary btn-lg mt-3">Update</button>
-      </div>
-    </form>
-  </div>
+{% from "macros/fields.html" import render_profile_field %} {% extends
+"base.html" %} {% block title %} Change Password {% endblock title %} {% block
+content %}
+<div class="container col-3 mt-5">
+  <form
+    method="POST"
+    action="{{ url_for('users.change_password', user_id=g.user.id) }}"
+    novalidate
+  >
+    {{ form.hidden_tag() }} {{ render_profile_field(form.current_password) }} {{
+    render_profile_field(form.new_password) }} {{
+    render_profile_field(form.new_password_retype) }}
+    <div class="form-group text-center">
+      <button type="submit" class="btn btn-primary btn-lg mt-3">Update</button>
+    </div>
+  </form>
+</div>
 {% endblock content %}
